--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 
   --back-header: #090909;
   --primary-color: #D09B73;
+  --text-white: #ffffff;
+  --bak-button: #000000;
 
   --primary-font: 'Inika', sans-serif;
 }
@@ -13,13 +15,13 @@
   padding: 0;
   margin: 0;
   font-family: var(--primary-font);
+  color: var(--text-white);
 }
 
 body {
   height: 2000px;
   display: flex;
   flex-direction: column;
-
 }
 
 header {
@@ -70,8 +72,8 @@ header .content-header nav ul {
 }
 
 header .content-header nav ul li a {
-  text-decoration: none;
   color: var(--text-white);
+  text-decoration: none;
   font-size: 14px;
   font-weight: 400;
   display: flex;
@@ -79,7 +81,7 @@ header .content-header nav ul li a {
 }
 
 header .content-header nav ul li a:hover {
-  color: var(--text-white);
+  color: var(--primary-color);
 }
 
 main {
@@ -92,11 +94,21 @@ main {
 
 main {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+
 }
 
-.image {
+
+#home {
+  margin-top: 200px;
+  width: 80%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+#home .image {
   position: relative;
 }
 
@@ -123,4 +135,68 @@ main {
   width: 252px;
   border: 3px var(--primary-color) solid;
   border-top: none;
+}
+
+#home .text-box {
+  max-width: 570px;
+}
+
+#home .text-box .text h1 {
+  color: var(--primary-color);
+  font-size: 48px;
+}
+
+#home .text-box .text #subtitle {
+  font-size: 36px;
+  color: var(--primary-color);
+  margin-bottom: 70px;
+}
+
+#home .text-box p {
+  margin-bottom: 82px;
+  font-size: 20px;
+}
+
+#home .text-box a {
+  text-decoration: none;
+  color: var(--primary-color);
+  font-size: 14px;
+  background-color: var(--bak-button);
+  padding: 21.5px 36px;
+  border: 1px solid var(--primary-color);
+}
+
+.img-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.info-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  gap: 5px;
+}
+
+.info-img p {
+  margin: 0;
+}
+
+.info-text {
+  line-height: 18px;
+  font: 14px;
+}
+
+.info-text p:last-child {
+  font-weight: bold;
+}
+
+.info-img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
