--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,13 @@
 }
 
 body {
-  height: 2000px;
   display: flex;
   flex-direction: column;
 }
 
 header {
   display: flex;
-  position: fixed;
+  position: static;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -85,27 +84,27 @@ header .content-header nav ul li a:hover {
 }
 
 main {
-  height: 100vh;
-  background: no-repeat url(/img/background-home.png);
-  background-size: cover;
-  background-position: bottom;
-  width: 100%;
-}
+  margin-top: 75px;
 
-main {
+  width: 100%;
+
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-
 }
 
-
 #home {
-  margin-top: 200px;
-  width: 80%;
+  height: 100vh;
+  width: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  padding: 110px 80px 0 80px;
+
+  background: no-repeat url(/img/background-home.png);
+  background-size: cover;
+  background-position: top;
 }
 
 #home .image {
@@ -199,4 +198,101 @@ main {
   justify-content: center;
   align-items: center;
   gap: 8px;
+}
+
+/* Winner Projects */
+
+#winner-project-1 h2 {
+  color: var(--primary-color);
+  font-size: 36px;
+  margin-bottom: 9px;
+}
+
+#winner-project-1 p {
+  margin-bottom: 80px;
+  font-size: 20px;
+}
+
+
+#winner-project-1 {
+  background: no-repeat url(/img/background-category-1.png);
+  background-size: cover;
+  background-position: bottom;
+  width: 100%;
+  height: 100vh;
+  padding: 0 80px 0 80px;
+}
+
+#winner-project-1 .category-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 29px;
+}
+
+/*winner primary*/
+
+.winner {
+  position: relative;
+}
+
+.winner .img-winner {
+  height: 313px;
+  width: 426px;
+}
+
+.img-winner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.winner .border-winner {
+  top: -10px;
+  left: -6px;
+  position: absolute;
+  border: 3px solid var(--primary-color);
+  width: 438px;
+  height: 332px;
+}
+
+/*winner secundary*/
+.winner-secundary .winner {
+  position: relative;
+}
+
+.winner-secundary .winner .img-winner {
+  width: 360px;
+  height: 265px;
+}
+
+.img-winner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.winner-secundary .winner .border-winner {
+  top: -8px;
+  left: -5px;
+  position: absolute;
+  border: 3px solid var(--primary-color);
+  width: 371px;
+  height: 281px;
+}
+
+.text-description {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.text-description h4 {
+  color: var(--primary-color);
+  font-size: 36px;
+  font-weight: 400px;
+}
+
+.text-description p {
+  font-size: 20px;
+  font-weight: 400px;
 }
