--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 header {
   display: flex;
-  position: static;
+  position: fixed;
   justify-content: center;
   align-items: center;
   width: 100%;
