--- a/css/subscription.css
+++ b/css/subscription.css
@@ -2,8 +2,8 @@
 
 :root {
 
-  --back-header: #090909;
-  --primary-color: #D09B73;
+  --back-header: #181621;
+  --primary-color: #00B2FF;
   --text-white: #ffffff;
   --back-button: #000000;
 
@@ -23,6 +23,7 @@ body {
   flex-direction: column;
 }
 
+
 header {
   display: flex;
   position: fixed;
@@ -33,9 +34,6 @@ header {
   background-color: var(--back-header);
   padding: 0 150px;
   z-index: 20;
-
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
 }
 
 header .content-header {
@@ -54,8 +52,9 @@ header .content-header a {
 
 header .content-header a h3 {
   text-decoration: none;
-  color: var(--primary-color);
+  color: var(--text-white);
   font-size: 20px;
+  font-weight: 400;
   margin: 0;
 }
 
@@ -94,17 +93,17 @@ main {
 }
 
 #home {
-  height: 100vh;
+  height: calc(100vh - 75px);
   width: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  gap: 133px;
+  gap: 122px;
   padding: 110px 80px 0 80px;
 
-  background: no-repeat url(/img/background-home.png);
+  background: no-repeat url(/img/background-inscription.png);
   background-size: cover;
-  background-position: top;
+  background-position: bottom;
 }
 
 #home .image {
@@ -137,7 +136,10 @@ main {
 }
 
 #home .text-box {
-  max-width: 570px;
+  max-width: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #home .text-box .text h1 {
@@ -154,6 +156,14 @@ main {
 #home .text-box p {
   margin-bottom: 82px;
   font-size: 20px;
+  max-width: 551px;
+}
+
+#home .text-box .buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 22px;
 }
 
 #home .text-box a {
@@ -161,18 +171,19 @@ main {
   color: var(--primary-color);
   font-size: 14px;
   background-color: var(--back-button);
-  padding: 21.5px 36px;
-  border: 1px solid var(--primary-color);
+  padding: 17px 30px;
+  border: 2px solid var(--primary-color);
   transition: 0.3s all;
 }
 
+#home .text-box a:last-child {
+  padding: 17px 67px;
+}
+
 #home .text-box a:hover {
-  text-decoration: none;
   color: var(--back-button);
   font-weight: 700;
   background-color: var(--primary-color);
-  padding: 21.5px 36px;
-  border: 1px solid var(--primary-color);
 }
 
 
@@ -181,129 +192,4 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.info-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 50px;
-  gap: 5px;
-}
-
-.info-img p {
-  margin: 0;
-}
-
-.info-text {
-  line-height: 18px;
-  font: 14px;
-}
-
-.info-text p:last-child {
-  font-weight: bold;
-}
-
-.info-img-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-}
-
-/* Winner Projects */
-
-#winner-project-1 h2 {
-  color: var(--primary-color);
-  font-size: 36px;
-  margin-bottom: 9px;
-}
-
-#winner-project-1 p {
-  margin-bottom: 80px;
-  font-size: 20px;
-}
-
-
-#winner-project-1 {
-  background: no-repeat url(/img/background-category-1.png);
-  background-size: cover;
-  background-position: bottom;
-  width: 100%;
-  height: 100vh;
-  padding: 0 80px 0 80px;
-}
-
-#winner-project-1 .category-1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 29px;
-}
-
-/*winner primary*/
-
-.winner {
-  position: relative;
-}
-
-.winner .img-winner {
-  height: 313px;
-  width: 426px;
-}
-
-.img-winner img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.winner .border-winner {
-  top: -10px;
-  left: -6px;
-  position: absolute;
-  border: 3px solid var(--primary-color);
-  width: 438px;
-  height: 332px;
-}
-
-/*winner secundary*/
-.winner-secundary .winner {
-  position: relative;
-}
-
-.winner-secundary .winner .img-winner {
-  width: 360px;
-  height: 265px;
-}
-
-.img-winner img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.winner-secundary .winner .border-winner {
-  top: -8px;
-  left: -5px;
-  position: absolute;
-  border: 3px solid var(--primary-color);
-  width: 371px;
-  height: 281px;
-}
-
-.text-description {
-  margin-top: 20px;
-  text-align: center;
-}
-
-.text-description h4 {
-  color: var(--primary-color);
-  font-size: 36px;
-  font-weight: 400px;
-}
-
-.text-description p {
-  font-size: 20px;
-  font-weight: 400px;
 }
