--- a/css/style.css
+++ b/css/style.css
@@ -336,5 +336,69 @@ main {
 /* all projects */
 
 .all-projects h2 {
-  margin-bottom: 126px;
+  margin-bottom: 80px;
+}
+
+
+
+main .slider-group {
+  width: 100%;
+}
+
+
+.content-area .content {
+  background-color: var(--filter-bg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 30px;
+}
+
+.content-area .content .img-area {
+  width: 600px;
+  height: 350px;
+  margin-bottom: 22px;
+}
+
+.content-area .content img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-bottom: 40px;
+}
+
+.content-area .content p {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.owl-dots {
+  text-align: center;
+}
+
+#slider .owl-dots button.owl-dot {
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  border: 2px solid var(--primary-color);
+  margin: 0 10px;
+  border-radius: 50%;
+}
+
+#slider .owl-dots .owl-dot.active {
+  border: none;
+  background-color: var(--primary-color);
+}
+
+.conteiner+img {
+  width: 100px;
+}
+
+.title-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
