--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --primary-color: #D09B73;
   --text-white: #ffffff;
   --back-button: #000000;
+  --back-footer: #14120E;
 
   --primary-font: 'Inika', sans-serif;
 }
@@ -52,7 +53,8 @@ header .content-header a {
   text-decoration: none;
 }
 
-header .content-header a h3 {
+header .content-header a h3,
+footer h3 {
   text-decoration: none;
   color: var(--primary-color);
   font-size: 20px;
@@ -228,7 +230,6 @@ main {
 
 
 .winner-project {
-
   background: no-repeat url(/img/background-category-1.png);
   background-size: cover;
   background-position: bottom;
@@ -255,6 +256,10 @@ main {
   justify-content: center;
   align-items: center;
   gap: 29px;
+}
+
+.img-winner a {
+  z-index: 20;
 }
 
 /*winner primary*/
@@ -339,12 +344,9 @@ main {
   margin-bottom: 80px;
 }
 
-
-
 main .slider-group {
   width: 100%;
 }
-
 
 .content-area .content {
   background-color: var(--filter-bg);
@@ -401,4 +403,178 @@ main .slider-group {
   align-items: center;
   flex-direction: column;
   gap: 10px;
+}
+
+/* DEPOIMENTOS */
+
+
+#depoimentos {
+  width: 100%;
+  height: 100vh;
+
+  background: no-repeat url(/img/background-category-1.png);
+  background-size: cover;
+  background-position: bottom;
+}
+
+
+/* CONTATOS */
+#contatos {
+  width: 100%;
+  padding-bottom: 95px;
+
+
+  background: no-repeat url(/img/background-home.png);
+  background-size: cover;
+  background-position: top;
+}
+
+#contatos .contact-box {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+#contatos .border-external {
+  position: relative;
+  width: 374px;
+  height: 270px;
+  border: 2px solid var(--primary-color);
+}
+
+#contatos .contact-box .border-top-1,
+#contatos .border-top-2,
+#contatos .border-mid-1,
+#contatos .border-mid-2,
+#contatos .border-bot-1,
+#contatos .border-bot-2 {
+  position: absolute;
+  border: 2px solid var(--primary-color);
+
+  padding: 11px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#contatos .border-top-1,
+#contatos .border-bot-1 {
+  left: 7px;
+  width: 108px;
+  height: 58px;
+}
+
+#contatos .border-top-2,
+#contatos .border-bot-2 {
+  right: 7px;
+  width: 241px;
+  height: 58px;
+}
+
+#contatos .border-bot-1,
+#contatos .border-bot-2 {
+  bottom: 0;
+  border-bottom: none;
+}
+
+#contatos .border-top-1,
+#contatos .border-top-2 {
+  top: 0;
+  border-top: none;
+}
+
+
+#contatos .border-mid-1 {
+  top: 25%;
+  left: 7px;
+  width: 108px;
+  height: 135px;
+}
+
+#contatos .border-mid-2 {
+  top: 25%;
+  right: 7px;
+  width: 241px;
+  height: 135px;
+}
+
+#contatos .border-bot-2 {
+  justify-content: space-between;
+}
+
+
+#contatos .border-bot-2 .github a svg,
+#contatos .border-bot-2 .linkedin a svg {
+  transition: 0.2s ease-in-out all;
+}
+
+#contatos .border-bot-2 .github a:hover svg,
+#contatos .border-bot-2 .linkedin a:hover svg {
+  transform: translateY(-1px);
+}
+
+#contatos .border-top-2 h5 {
+  font-size: 20px;
+  font-weight: 400;
+  margin: 0;
+}
+
+#contatos .border-mid-2 p {
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0;
+}
+
+#contatos h2 {
+  color: var(--primary-color);
+  font-size: 36px;
+  margin: 0 0 72px 80px;
+}
+
+
+
+/* FOOTER */
+footer {
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  background-color: var(--back-footer);
+}
+
+footer p {
+  color: var(--text-white);
+  font-size: 14px;
+  margin: 0;
+}
+
+footer .contact-footer p {
+  color: var(--primary-color);
+  font-size: 14px;
+  margin: 0;
+  line-height: 15px;
+  text-align: center;
+}
+
+footer .contact-footer ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  gap: 10px;
+}
+
+footer .contact-footer li a {
+  font-size: 14px;
+  font-weight: 400;
+  text-decoration: none;
+  color: var(--text-white);
+}
+
+footer .contact-footer li a:hover {
+  color: var(--primary-color);
 }
