--- a/css/subscription.css
+++ b/css/subscription.css
@@ -23,7 +23,6 @@ body {
   flex-direction: column;
 }
 
-
 main {
   width: 100%;
   display: flex;
@@ -39,7 +38,6 @@ main {
   align-items: center;
   justify-content: center;
   gap: 122px;
-
 
   background: no-repeat url(/img/background-inscription.png);
   background-size: cover;
@@ -65,7 +63,6 @@ main {
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
   border-bottom: none;
-
 }
 
 #home .border-img .bot {
@@ -126,10 +123,17 @@ main {
   background-color: var(--primary-color);
 }
 
-
 .img-box {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 10px;
+}
+
+.img-box h3 {
+  font-size: 20px;
+  font-weight: 400;
+  font-family: var(--primary-font);
+  color: var(--primary-color);
 }
