--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@ main .slider-group {
   margin-bottom: 22px;
 }
 
-.content-area .content img {
+#slider .content-area .content img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -407,23 +407,128 @@ main .slider-group {
 
 /* DEPOIMENTOS */
 
+/*Slider*/
 
-#depoimentos {
+.depoimentos {
   width: 100%;
   height: 100vh;
-
   background: no-repeat url(/img/background-category-1.png);
   background-size: cover;
   background-position: bottom;
+  padding: 0 80px;
 }
 
+.depoimentos h2 {
+  margin-bottom: 80px;
+}
+
+main .slider-group {
+  width: 100%;
+}
+
+#slider2 .content-area {
+  max-width: 700px;
+}
+
+#slider2 .content-area .content {
+  background-color: var(--filter-bg);
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 30px;
+  padding: 63px;
+  border: 2px solid var(--primary-color);
+
+}
+
+.owl-carousel .owl-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#slider2 .content-area .content .img-area {
+  height: 332px;
+  border: 2px solid var(--primary-color);
+  margin: 0;
+  background-color: black;
+}
+
+#slider2 .content-area .content .img-area img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin: 0;
+
+}
+
+#slider2 .content-area .content h4 {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  max-width: 500px;
+}
+
+#slider2 .content-area .content p {
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0;
+  max-width: 500px;
+}
+
+#slider2 .owl-dots {
+  text-align: center;
+}
+
+#slider2 .owl-dots button.owl-dot {
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  border: 2px solid var(--primary-color);
+  margin: 0 10px;
+  border-radius: 50%;
+}
+
+#slider2 .owl-dots .owl-dot.active {
+  border: none;
+  background-color: var(--primary-color);
+}
+
+#slider2 .conteiner+img {
+  width: 100px;
+}
+
+#slider2 .title-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#slider2 .box-text {
+  height: 328px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+#slider2 .depoimentos-contact {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 20px;
+}
+
+#slider2 .container {
+  margin: 0;
+}
 
 /* CONTATOS */
 #contatos {
   width: 100%;
   padding-bottom: 95px;
-
-
   background: no-repeat url(/img/background-home.png);
   background-size: cover;
   background-position: top;
@@ -490,6 +595,7 @@ main .slider-group {
   left: 7px;
   width: 108px;
   height: 135px;
+  padding: 4px;
 }
 
 #contatos .border-mid-2 {
@@ -530,6 +636,13 @@ main .slider-group {
   color: var(--primary-color);
   font-size: 36px;
   margin: 0 0 72px 80px;
+}
+
+#contatos img {
+  width: 100px;
+  height: 125px;
+  object-fit: cover;
+
 }
 
 
