--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,15 @@
 body {
   display: flex;
   flex-direction: column;
-  max-width: 1240;
+
   background: no-repeat url(/img/background.png);
   background-size: cover;
   background-position: top;
+
+}
+
+#home, .winner-project, #contatos {
+  max-width: 1440px;
 }
 
 header {
@@ -39,7 +44,7 @@ header {
   padding: 0 80px;
   z-index: 20;
 
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
 
 }
 
@@ -99,17 +104,19 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
+
 }
 
 #home {
+  height: calc(100vh - 75px);
   width: 100%;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   gap: 133px;
-  padding: 120px 80px 60px 80px;
+  padding: 0 80px 0 80px;
 }
 
 #home .image {
@@ -565,7 +572,7 @@ main .slider-group {
 /* CONTATOS */
 #contatos {
   width: 100%;
-  padding: 60px 0;
+  padding: 60px 80px;
 }
 
 #contatos .contact-box {
@@ -660,7 +667,7 @@ main .slider-group {
 }
 
 #contatos .border-mid-2 p {
-  font-size: 0.875rem;
+  font-size: 0.75rem;
   font-weight: 400;
   margin: 0;
 }
@@ -668,7 +675,7 @@ main .slider-group {
 #contatos h2 {
   color: var(--primary-color);
   font-size: 2.25rem;
-  margin: 0 0 72px 80px;
+  margin-bottom: 72px;
 }
 
 #contatos img {
