--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -310,9 +310,6 @@
     font-size: 9.6px;
   }
 
-
-
-
   /* ----- Menu Toggle ----- */
   .menu-toggle .one,
   .menu-toggle .three {
@@ -715,4 +712,252 @@
 }
 
 /* - - - - - Mobile Pequeno - - - - */
-@media(max-width: 470px) {}
+@media(max-width: 470px) {
+
+  * {
+    font-size: 9px;
+  }
+
+  /* ----- Menu Toggle ----- */
+
+  .menu-section.on .menu-toggle {
+    top: 14px;
+    right: 29px;
+  }
+
+  header, footer {
+    height: 50px;
+    padding: 0 10px;
+  }
+
+  header .content-header a h3, footer h3 {
+    font-size: 10px;
+  }
+
+  footer {
+    padding: 0 10px;
+    justify-content: space-between;
+  }
+
+  header .content-header nav ul li a {
+    padding: 10px 0;
+    font-size: 18px;
+  }
+
+  #home {
+    gap: 120px;
+    padding: 0 10px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  #home .text-box .text #subtitle {
+    margin-bottom: 360px;
+  }
+
+  #home .text-box p {
+    margin-bottom: 40px;
+  }
+
+  #home .text-box {
+    order: -1;
+    max-width: 450px;
+    text-align: center;
+  }
+
+  #home .text-box a {
+    font-size: 9px;
+  }
+
+  #home .text-box a, #home .text-box a:hover {
+    padding: 17px 29px;
+  }
+
+  .img-box {
+    position: absolute;
+    top: 180px;
+  }
+
+  #home .border-img {
+    top: -12px;
+    left: -10px;
+    height: 315.2px;
+    width: 160px;
+  }
+
+  #home .border-img .top {
+    height: 167.8px;
+    width: 164px;
+  }
+
+  /* Winner Projects*/
+
+  .winner-project {
+    padding: 30px 10px;
+  }
+
+  .winner-project.padding {
+    padding: 0 10px 40px 10px;
+  }
+
+  .text-description h4 {
+    font-size: 20px;
+  }
+
+  .winner-project p {
+    margin-bottom: 50px;
+    font-size: 1.25rem;
+  }
+
+  .winner .img-winner,
+  .winner-secundary .winner .img-winner {
+    height: 192px;
+    width: 277px;
+  }
+
+  .winner .border-winner,
+  .winner-secundary .winner .border-winner {
+    width: 103%;
+    height: 208px;
+  }
+
+  .content-area .content .img-area {
+    width: 346px;
+    height: 233px;
+    margin-bottom: 22px;
+  }
+
+  /* All Projects */
+  .all-projects h2,
+  .depoimentos h2,
+  #contatos h2 {
+    margin-bottom: 40px;
+  }
+
+  .content-area .content .img-area {
+    width: 266px;
+    height: 182px;
+  }
+
+  .slider-group .all-projects-contact .github, .slider-group .all-projects-contact .linkedin {
+    height: 24px;
+    padding: 5px 26px;
+  }
+
+  /* Depoimentos */
+  #slider2 .content-area .content {
+    height: 214.9px;
+    width: 261.36px;
+    gap: 15.84px;
+    padding: 33.26px 15px;
+  }
+
+  #slider2 .content-area .content .img-area {
+    width: 428.2px;
+    height: 139.92px;
+  }
+
+  #slider2 .content-area .content p {
+    font-size: 7.5px;
+  }
+
+  #slider .owl-dots button.owl-dot, #slider2 .owl-dots button.owl-dot {
+    height: 8px;
+    width: 8px;
+    border: 2px solid var(--primary-color);
+    margin: 0 5px;
+  }
+
+  .depoimentos-linkedin svg {
+    width: 48px;
+  }
+
+  .depoimentos-github svg {
+    width: 30px;
+  }
+
+  .depoimentos-github svg:first-child {
+    width: 10px;
+  }
+
+  /* Contatos */
+  #contatos {
+    width: 100%;
+    padding: 30px 0px;
+  }
+
+  #contatos .border-external {
+    width: 299.2px;
+    height: 216px
+  }
+
+  #contatos .contact-box .border-top-1,
+  #contatos .border-top-2,
+  #contatos .border-mid-1,
+  #contatos .border-mid-2,
+  #contatos .border-bot-1,
+  #contatos .border-bot-2 {
+    padding: 8.8px;
+  }
+
+  #contatos .border-top-1,
+  #contatos .border-bot-1 {
+    width: 86.4px;
+    height: 46.4px;
+  }
+
+  #contatos .border-top-2,
+  #contatos .border-bot-2 {
+    width: 192.8px;
+    height: 46.4px;
+  }
+
+  #contatos .border-mid-1 {
+    width: 86.4px;
+    height: 108px;
+    padding: 3.2px;
+  }
+
+  #contatos .border-mid-2 {
+    width: 192.8px;
+    height: 108px;
+  }
+
+  #contatos .border-mid-2 p {
+    font-size: 0.875rem;
+  }
+
+  #contatos h2 {
+    padding-left: 10px;
+    font-size: 2.25rem;
+  }
+
+  #contatos img {
+    width: 80px;
+    height: 100px;
+  }
+
+
+  #contatos .border-top-2 h5 {
+    font-size: 18px;
+  }
+
+  #contatos .border-mid-2 p {
+    font-size: 10px;
+  }
+
+  #contatos .linkedin svg {
+    width: 64px;
+  }
+
+
+  #contatos .github svg {
+    width: 40px;
+  }
+
+  #contatos .github a svg:first-child {
+    width: 15px;
+  }
+
+
+}
