--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,8 @@ main .slider-group {
   margin-bottom: 22px;
 }
 
+
+
 #slider .content-area .content img {
   width: 100%;
   height: 100%;
@@ -499,7 +501,9 @@ main .slider-group {
   font-size: 0.875rem;
   font-weight: 400;
   margin: 0;
+  max-height: 252px;
   max-width: 500px;
+  overflow: hidden;
 }
 
 #slider2 .owl-dots {
@@ -544,6 +548,10 @@ main .slider-group {
   align-items: center;
   justify-content: end;
   gap: 20px;
+}
+
+#slider2 .depoimentos-contact a {
+  text-decoration: none;
 }
 
 #slider2 .container {
