--- a/css/subscription.css
+++ b/css/subscription.css
@@ -48,6 +48,7 @@ main {
 
 #home .image {
   position: relative;
+  margin-bottom: 15px;
 }
 
 #home .border-img {
@@ -130,12 +131,13 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 0px;
 }
 
 .img-box h3 {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
   font-family: var(--primary-font);
-  color: var(--primary-color);
+  color: var(--text-white);
+  margin-top: 20px;
 }
