--- a/assets/css/layout/_all-projects.css
+++ b/assets/css/layout/_all-projects.css
@@ -154,6 +154,10 @@ main .slider-group {
     height: 233px;
     margin-bottom: 22px;
   }
+
+  #slider .owl-dots button.owl-dot {
+    margin: 0 6px;
+  }
 }
 
 /* - - - - - Mobile Pequeno - - - - */
@@ -167,5 +171,11 @@ main .slider-group {
   .slider-group .all-projects-contact .linkedin {
     height: 24px;
     padding: 5px 26px;
+  }
+
+  #slider .owl-dots button.owl-dot {
+    height: 8px;
+    width: 8px;
+    margin: 0 3px;
   }
 }
